- fix bug delegate overflow

--- a/src/app/pages/validators/validators.component.scss
+++ b/src/app/pages/validators/validators.component.scss
@@ -216,7 +216,7 @@ form.search-form-validators {
       top: 0;
       left: 0;
       width: 100%;
-      height: calc(100vh - 62px);
+      height: 100%;
       border: none;
       border-radius: 0 !important;
     }
